--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4164,10 +4164,10 @@ textarea.form-control-lg {
   justify-content: space-between;
 }
 .navbar-brand {
-  padding-top: 0.3125rem;
-  padding-bottom: 0.3125rem;
-  margin-right: 1rem;
-  font-size: 1.25rem;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  margin-right: 5rem;
+  font-size: 0.95rem;
   text-decoration: none;
   white-space: nowrap;
 }
@@ -11557,8 +11557,19 @@ body {
   border: 0;
 }
 
+
+
+.video-bg{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  min-height: 100%;
+  min-width: 100%;
+  z-index: -1;
+}
+
 .masthead {
-  position: relative;
+  /* position: relative;
   width: 100%;
   height: auto;
   min-height: 35rem;
@@ -11567,21 +11578,39 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
-  background-size: cover;
+  background-size: cover; */
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%);
+  background-color: rgba(0, 0, 0, 0.03);
+  color: white;
+  font-size: 3em;
+  position: relative;
+  min-height: 100vh;
+  overflow: hidden;
 }
 .masthead h1, .masthead .h1 {
-  font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 2.5rem;
-  line-height: 2.5rem;
+  /* font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; */
+  font-family: fantasy;
+  font-size: 0.3rem;
+  line-height: 0.5rem;
   letter-spacing: 0.8rem;
   background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0));
-  -webkit-text-fill-color: transparent;
+  -webkit-text-fill-color: white;
   -webkit-background-clip: text;
           background-clip: text;
 }
 .masthead h2, .masthead .h2 {
   max-width: 20rem;
   font-size: 1rem;
+}
+
+.masthead .mh .btn .btn-primary{
+  font-size: 10rem;
+  line-height: 0.5rem;
 }
 @media (min-width: 768px) {
   .masthead h1, .masthead .h1 {
@@ -11594,9 +11623,11 @@ body {
     height: 100vh;
     padding: 0;
   }
+ 
+  /* for title */
   .masthead h1, .masthead .h1 {
-    font-size: 6.5rem;
-    line-height: 6.5rem;
+    font-size: 5.5rem;
+    line-height: 5.5rem;
     letter-spacing: 0.8rem;
   }
   .masthead h2, .masthead .h2 {
